# WebGL-WebXR-Emscripten

./: .gitmodules  CMakeLists.txt  README.md  build_and_deploy.sh  build_and_run.sh  https_build_and_run.sh  native_build.sh  readme.md  server.py
src/: XR.h  application.cpp  application.h  collision_detection.h  fbo.h  main.cpp  material.cpp  material.h  raw_meshes.h  raw_shaders.h  render.cpp  render.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.h  volumetric_octree.h
web/: page.html  page1.html
